--- a/index.html
+++ b/index.html
@@ -117,12 +117,23 @@
 
                         <!-- Progress Box -->
                         <div class="progress-box">
+                            <h5>Python <span class="color-heading pull-right">70%</span></h5>
+                            <div class="progress">
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="70"></div>
+                            </div>
+                        </div>
+                        <div class="progress-box">
                             <h5>Core Java <span class="color-heading pull-right">70%</span></h5>
                             <div class="progress">
                                 <div class="progress-bar bg-color-base" role="progressbar" data-width="70"></div>
                             </div>
                         </div>
-                       
+                       <div class="progress-box">
+                            <h5>Html <span class="color-heading pull-right">70%</span></h5>
+                            <div class="progress">
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="75"></div>
+                            </div>
+                        </div>
                         <div class="progress-box">
                             <h5>JavaSript <span class="color-heading pull-right">30%</span></h5>
                             <div class="progress">
